# aces-skills

./: .gitignore  CREDITS.md  README.md  main.py  pyproject.toml  run_fabricstitch.sh  sync_patterns.sh  sync_skill.sh  update_fabric.sh
CodingArchitecture/FabricStitch/: acms_course_stitch.py  guide_renderer.py
CodingArchitecture/FabricStitch/ACES_extract_wisdom/: .sync_hash  fabric_course_stitch.sh  fabric_stitch.sh  fabric_stitch_v2.sh  system.md  system.toon  system.yaml
CodingArchitecture/FabricStitch/ACES_fabric_analyze/: _agent_env.py  (+12 more)
MetaArchitecture/ADRs/: ADR-015-TaskWorkspace-AND-Barrier.md
MetaArchitecture/registry/: 001_aces_schema.sql  template_registry.py
Output/fabric-analysis/: DuckLake-analysis-header.md  DuckLake-analysis-v2.docx  DuckLake-analysis.docx  DuckLake-content_synthesize_eloquent_narrative_from_wisdom.md  DuckLake-content_wisdom_extract.md
cost/: cost_analyzer.py  init_cost_db.py
demo/: ACES-Demo-20260325-v2.html  ACES-Demo-20260325-v2.ps1  ACES-Demo-20260413.html  ACES-Demo-20260413.ps1  demo_01_architecture.sh  demo_02_sync.sh  demo_03_cost.sh  demo_04_marimo.sh  demo_04_monitor.ps1  demo_05_psa.sh  demo_06_fabric.sh  demo_07_adr009.sh  demo_preflight.sh  demo_run.sh  launch_demo1_fabricstitch.sh  launch_demo2_generators.sh  launch_demo3_monitor.sh  launch_demo4_diary.sh  launch_demo5_github.sh  launch_demo_preflight.sh
docs/: ADR-009-D4-MDLC-Governance.md  fabric-guide.md  navigator-diary-2026-03-14.md  sync_skill.md  vendor_rates.md
vendor_rates/: install_aces_stack.sh  refresh_rates.sh  setup_cron.sh  vendor_rates.yaml
(+87 files in other folders)
