[project]
name = "acms-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "blake3>=1.0.8",
    "duckdb>=1.5.1",
    "langchain-anthropic>=1.4.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.6",
    "langsmith>=0.7.25",
    "marimo>=0.22.4",
    "numpy>=2.4.4",
    "pgvector>=0.4.2",
    "polars>=1.39.0",
    "psycopg[binary]>=3.3.3",
    "semver>=3.0.4",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.23",
    "tiktoken>=0.12.0",
]
